edit slider cbd

--- a/CBD/home.html
+++ b/CBD/home.html
@@ -133,56 +133,12 @@
         <div class="preview">
             <div class="preview-slider">
                 <div>
-                    <div class="container">
-                        <div class="d-md-flex">
-                            <div class="preview__image order-md-2"><img src="img/content/preview-image.png" alt="" class="img-fluid"></div>
-                            <div class="preview__text">
-                                <div class="preview__logo"><img src="img/content/preview-logo.svg" alt="" class="img-fluid"></div>
-                                <div class="title_size-lg preview__title_margin preview__title">Получай сейчас – <br class="d-none d-lg-block">плати потом</div>
-                                <p><a href="#" class="btn btn-outline">Подробнее</a></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="slide-dark text-inversion">
-                    <img src="img/content/preview-slide.jpg" alt="" class="preview-slider__image d-none d-md-block">
-                    <img src="img/content/preview-slide-m.jpg" alt="" class="preview-slider__image d-md-none">
-                    <div class="container">
-                        <div class="preview__text">
-                            <div class="title_size-lg title_margin-bottom-md preview__title pb-1">Официальный магазин <br class="d-md-none">CBD продукции в России</div>
-                            <p class="d-none d-md-block">Тщательный контроль качества сырья. Всегда точная концетрация КБД. Полностью легальная продукция.</p>
-                            <div class="preview__buttons">
-                                <a href="#" class="btn btn-light">Смотреть каталог</a>
-                                <a href="#" class="btn btn-outline_inversion d-none d-lg-inline-flex">О Кбд</a>
-                            </div>
-                        </div>
-                    </div>
+                    <img src="img/content/slide-1.webp" alt="" class="preview-slider__image d-none d-md-block">
+                    <img src="img/content/slide-1-m.webp" alt="" class="preview-slider__image d-md-none">
                 </div>
                 <div>
-                    <div class="container">
-                        <div class="d-md-flex">
-                            <div class="preview__image order-md-2"><img src="img/content/preview-image.png" alt="" class="img-fluid"></div>
-                            <div class="preview__text">
-                                <div class="preview__logo"><img src="img/content/preview-logo.svg" alt="" class="img-fluid"></div>
-                                <div class="title_size-lg preview__title_margin preview__title">Получай сейчас – <br class="d-none d-lg-block">плати потом</div>
-                                <p><a href="#" class="btn btn-outline">Подробнее</a></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="slide-dark text-inversion">
-                    <img src="img/content/preview-slide.jpg" alt="" class="preview-slider__image d-none d-md-block">
-                    <img src="img/content/preview-slide-m.jpg" alt="" class="preview-slider__image d-md-none">
-                    <div class="container">
-                        <div class="preview__text">
-                            <div class="title_size-lg title_margin-bottom-md preview__title pb-1">Официальный магазин <br class="d-md-none">CBD продукции в России</div>
-                            <p class="d-none d-md-block">Тщательный контроль качества сырья. Всегда точная концетрация КБД. Полностью легальная продукция.</p>
-                            <div class="preview__buttons">
-                                <a href="#" class="btn btn-light">Смотреть каталог</a>
-                                <a href="#" class="btn btn-outline_inversion d-none d-lg-inline-flex">О Кбд</a>
-                            </div>
-                        </div>
-                    </div>
+                    <img src="img/content/slide-2.webp" alt="" class="preview-slider__image d-none d-md-block">
+                    <img src="img/content/slide-2-m.webp" alt="" class="preview-slider__image d-md-none">
                 </div>
             </div>
         </div>
