CBD slider text

--- a/CBD/home.html
+++ b/CBD/home.html
@@ -132,9 +132,19 @@
         <!-- preview -->
         <div class="preview">
             <div class="preview-slider">
-                <div>
+                <div class="slide-dark text-inversion">
                     <img src="img/content/slide-1.webp" alt="" class="preview-slider__image d-none d-md-block">
                     <img src="img/content/slide-1-m.webp" alt="" class="preview-slider__image d-md-none">
+                    <div class="container">
+                        <div class="preview__text">
+                            <div class="title_size-lg title_margin-bottom-md preview__title pb-1">Официальный магазин <br class="d-md-none">CBD продукции в России</div>
+                            <p class="d-none d-md-block">Тщательный контроль качества сырья. Всегда точная концетрация КБД. Полностью легальная продукция.</p>
+                            <div class="preview__buttons">
+                                <a href="#" class="btn btn-light">Смотреть каталог</a>
+                                <a href="#" class="btn btn-outline_inversion d-none d-lg-inline-flex">О Кбд</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div>
                     <img src="img/content/slide-2.webp" alt="" class="preview-slider__image d-none d-md-block">
